# DXX-Raytracer-D2

./: CMakeLists.txt  CMakePresets.json  README.md
RT/: RTgr.c  RTgr.h  RTmaterials.c  RTmaterials.h  dx12.c  dx12.h  material_viewer.cpp  polymodel_viewer.cpp
RT/Core/: Common.c  MiniMath.h
RT/Game/: Level.h  Lights.c  level.c
RT/Renderer/Backend/Common/include/: Renderer.h
RT/Renderer/Backend/DX12/: CMakeLists.txt
RT/Renderer/Backend/DX12/assets/: CMakeLists.txt
RT/Renderer/Backend/DX12/assets/shaders/: raster_blit.hlsl
RT/Renderer/Backend/DX12/assets/shaders/include/: common.hlsl
RT/Renderer/Backend/DX12/assets/shaders/include_shared/: shared_common.hlsl.h
RT/Renderer/Backend/DX12/src/: CommandQueue.cpp  DescriptorArena.cpp  GlobalDX.h  RenderBackend.cpp  RenderBackend.h  Renderer.cpp
d1/: CMakeLists.txt
d1/2d/: bitmap.c  font.c
d1/3d/: interp.c  setup.c
d1/arch/include/: window.h
d1/arch/ogl/: gr.c
d1/arch/sdl/: digi.c  digi_audio.c  event.c  gr.c  init.c  key.c  mouse.c  window.c
d1/editor/: info.c  med.c  meddraw.c
d1/include/: gr.h  maths.h  physfsx.h
d1/main/: ai.c  automap.c  bm.c  collide.c  config.c  console.c  credits.c  endlevel.c  fireball.c  game.c  gamecntl.c  gamefont.c  gamerend.c  gameseq.c  gauges.c  inferno.c  kconfig.c  laser.c  lighting.c  menu.c  morph.c  multi.c  multi.h  net_udp.c  object.c  physics.c  piggy.c  playsave.c  playsave.h  polyobj.c  polyobj.h  render.c  state.c  terrain.c  texmerge.c  titles.c  vers_id.c  vers_id.h
d1/misc/: args.c  error.c  hash.c
d2/: CMakeLists.txt
d2/2d/: bitblt.c  bitmap.c  circle.c  font.c  pcx.c  rle.c
d2/3d/: draw.c  rod.c
d2/arch/include/: key.h
d2/arch/ogl/: gr.c
d2/arch/sdl/: digi_audio.c  gr.c  key.c  window.c
d2/assets/textures/: misc086.material
d2/include/: args.h  dxxerror.h  gr.h  maths.h  physfsx.h  pstypes.h
d2/include/editor/: esegment.h
d2/main/: automap.c  bm.c  bm.h  collide.c  config.c  console.c  credits.c  endlevel.c  game.c  game.h  gamecntl.c  gamefont.c  gamepal.c  gamerend.c  gameseq.c  gauges.c  inferno.c  kconfig.c  kmatrix.c  laser.c  laser.h  lighting.c  menu.c  menu.h  morph.c  movie.c  multi.c  multi.h  net_udp.c  newmenu.c  object.c  paging.c  physics.c  piggy.c  piggy.h  playsave.c  playsave.h  polyobj.c  polyobj.h  powerup.c  (+7 more)
d2/mem/: mem.c
d2/misc/: args.c  strutil.c
d2/texmap/: ntmap.c
